Fix collapsing group header style

--- a/webapps/jsfComponents/styles/mts/css/collapsing_group.css
+++ b/webapps/jsfComponents/styles/mts/css/collapsing_group.css
@@ -2,7 +2,6 @@
 .eyeline_collapsingGroupHeader1 {
   cursor: pointer;
   padding-left: 15px;
-  height: 17px;
 }
 
 .eyeline_collapsingGroupHeader0 {
